src/components/Tribes/Tribes.css
/* src/components/TribesPage.css */
.tribes-page {
  font-family: Arial, sans-serif;
  text-align: center;
  padding: 20px;
}

.tribes-title {
  font-size: 48px;
  margin-bottom: 20px;
}

.slideshow-container {
  margin-top: 75px;
  overflow: hidden;
  width: 100%;
  margin-bottom: 40px;
}

.slideshow {
  display: flex;
  animation: scroll 30s linear infinite;
}

.slideshow img {
  width: 550px;
  height: 350px;
  object-fit: cover;
  margin-right: 10px;
}

@keyframes scroll {
  0% { transform: translateX(0); }
  100% { transform: translateX(-50%); }
}

.tribes-info {
  display: flex;
  justify-content: space-around;
  margin-bottom: 30px;
}

.tribes-info div {
  width: 40%;
}

.wishlist button {
  padding: 10px 20px;
  font-size: 18px;
  cursor: pointer;
  margin-bottom: 30px;
}

.video-container {
  margin-bottom: 30px;
}

.social-icons svg {
  margin: 0 10px;
  cursor: pointer;
}

